<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_collapseMode="parallax">

    <ImageView
            android:id="@+id/homeBigLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@android:color/darker_gray"
            android:scaleType="fitCenter"
            android:transitionName="@string/home_logo"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:layout_constraintEnd_toStartOf="@+id/tvScore"
            app:layout_constraintTop_toTopOf="@+id/tvScore"
            app:layout_constraintBottom_toBottomOf="@+id/tvScore"
            android:contentDescription="@string/home_big_logo"/>

    <ImageView
            android:id="@+id/awayBigLogo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@android:color/darker_gray"
            android:scaleType="fitXY"
            android:transitionName="@string/away_logo"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintStart_toEndOf="@+id/tvScore"
            app:layout_constraintTop_toTopOf="@+id/tvScore"
            app:layout_constraintBottom_toBottomOf="@+id/tvScore"
            android:contentDescription="@string/away_big_logo"/>
    <TextView
            android:id="@+id/tvScore"
            android:text="@string/score"
            android:textSize="50sp"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_small_margin"
            android:layout_marginEnd="@dimen/activity_small_margin"
            android:layout_marginStart="@dimen/activity_small_margin"
            android:layout_marginBottom="@dimen/activity_small_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
            android:id="@+id/bigHomeName"
            android:text="@string/team_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="@dimen/activity_small_margin"
            app:layout_constraintTop_toBottomOf="@+id/homeBigLogo"
            app:layout_constraintStart_toStartOf="@+id/homeBigLogo"
            app:layout_constraintEnd_toEndOf="@+id/homeBigLogo"
    />

    <TextView
            android:id="@+id/bigAwayName"
            android:text="@string/team_name"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            app:layout_constrainedWidth="true"
            android:layout_marginTop="@dimen/activity_small_margin"
            app:layout_constraintTop_toBottomOf="@+id/awayBigLogo"
            app:layout_constraintStart_toStartOf="@+id/awayBigLogo"
            app:layout_constraintEnd_toEndOf="@+id/awayBigLogo"
    />

</android.support.constraint.ConstraintLayout>