<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <TextView
            android:id="@+id/leagueName"
            android:text="@string/league_name"
            android:textColor="@android:color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:id="@+id/leagueDate"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_small_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@+id/leagueName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
            android:id="@+id/smallHomeLogo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:src="@android:color/darker_gray"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/leagueDate"
            android:contentDescription="@string/small_home_logo"/>
    <ImageView
            android:id="@+id/smallAwayLogo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:scaleType="fitXY"
            android:src="@android:color/darker_gray"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/leagueDate"
            android:contentDescription="@string/small_away_logo"/>
    <TextView
            android:id="@+id/smallHomeName"
            android:text="@string/team_name"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/smallHomeLogo"
            app:layout_constraintStart_toStartOf="@+id/smallHomeLogo"
            app:layout_constraintEnd_toEndOf="@+id/smallHomeLogo"/>
    <TextView
            android:id="@+id/smallAwayName"
            android:text="@string/team_name"
            android:textSize="16sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/smallAwayLogo"
            app:layout_constraintStart_toStartOf="@+id/smallAwayLogo"
            app:layout_constraintEnd_toEndOf="@+id/smallAwayLogo"/>

    <TextView
            android:text="@string/vs"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/vs"
            app:layout_constraintEnd_toStartOf="@+id/smallAwayLogo"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toEndOf="@+id/smallHomeLogo"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/smallAwayLogo"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/smallAwayName"/>

    <include layout="@layout/match_detail_layout"
             android:id="@+id/match_summary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/smallAwayName"
             android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <include layout="@layout/lineup_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/match_summary"
             android:layout_marginTop="@dimen/activity_vertical_margin"/>



</android.support.constraint.ConstraintLayout>
