<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        card_view:cardCornerRadius="4dp"
        android:focusable="true">

    <android.support.constraint.ConstraintLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        <TextView
                android:id="@+id/tv_league_name"
                android:text="@string/league_name"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:layout_marginStart="@dimen/activity_small_margin"
                android:layout_marginEnd="@dimen/activity_small_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/tv_date"
                android:text="@string/date"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="@dimen/activity_small_margin"
                android:layout_marginEnd="@dimen/activity_small_margin"
                app:layout_constraintTop_toBottomOf="@+id/tv_league_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
                android:id="@+id/tv_time"
                android:text="@string/time"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginStart="@dimen/activity_small_margin"
                android:layout_marginEnd="@dimen/activity_small_margin"
                app:layout_constraintTop_toBottomOf="@+id/tv_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        <ImageView
                android:id="@+id/img_home_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                android:layout_marginStart="@dimen/activity_small_margin"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:transitionName="@string/home_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time"/>
        <ImageView
                android:id="@+id/img_away_logo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="fitXY"
                android:src="@android:color/darker_gray"
                android:layout_marginEnd="@dimen/activity_small_margin"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:transitionName="@string/away_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_time"/>
        <TextView
                android:id="@+id/tv_home_score"
                android:text="@string/initial_score"
                android:textSize="50sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintStart_toEndOf="@+id/img_home_logo"
                app:layout_constraintTop_toTopOf="@+id/img_home_logo"
                app:layout_constraintBottom_toBottomOf="@+id/img_home_logo"/>
        <TextView
                android:id="@+id/tv_away_score"
                android:text="@string/initial_score"
                android:textSize="50sp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintEnd_toStartOf="@+id/img_away_logo"
                app:layout_constraintTop_toTopOf="@+id/img_away_logo"
                app:layout_constraintBottom_toBottomOf="@+id/img_away_logo"/>
        <TextView
                android:id="@+id/tv_separator"
                android:text="@string/score_separator"
                android:textSize="40sp"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/tv_home_score"
                app:layout_constraintEnd_toStartOf="@+id/tv_away_score"
                app:layout_constraintTop_toTopOf="@+id/tv_away_score"
                app:layout_constraintBottom_toBottomOf="@+id/tv_away_score"/>
        <TextView
                android:id="@+id/tv_home_team_name"
                android:text="@string/home_team"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:layout_marginStart="@dimen/activity_small_margin"
                android:layout_marginBottom="@dimen/activity_small_margin"
                app:layout_constraintTop_toBottomOf="@+id/img_home_logo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
                android:id="@+id/tv_away_team_name"
                android:text="@string/away_team"
                android:textColor="@android:color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_small_margin"
                android:layout_marginEnd="@dimen/activity_small_margin"
                android:layout_marginBottom="@dimen/activity_small_margin"
                app:layout_constraintTop_toBottomOf="@+id/img_away_logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>


    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>